--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -126,7 +126,7 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-i18n')
+    compile project(':realm')
     compile project(':react-native-vector-icons')
     compile project(':react-native-device-info')
     compile project(':react-native-config')
