--- a/package.json
+++ b/package.json
@@ -31,14 +31,15 @@
     "ramda": "^0.23.0",
     "react": "~15.4.1",
     "react-native": "0.42.0",
+    "react-native-action-button": "^2.6.9",
     "react-native-animatable": "^1.2.0",
     "react-native-config": "^0.2.1",
     "react-native-device-info": "^0.10.0",
     "react-native-drawer": "^2.3.0",
-    "react-native-i18n": "^1.0.0",
     "react-native-vector-icons": "^4.1.1",
     "react-navigation": "^1.0.0-beta.9",
     "react-redux": "^5.0.2",
+    "realm": "^1.3.1",
     "redux": "^3.6.0",
     "redux-persist": "^4.1.0",
     "redux-saga": "^0.14.3",
@@ -50,10 +51,16 @@
     "babel-eslint": "^7.1.1",
     "babel-preset-es2015": "^6.18.0",
     "enzyme": "^2.6.0",
+    "eslint": "^3.0.1",
+    "eslint-config-standard": "^5.1.0",
+    "eslint-config-standard-react": "^3.0.0",
+    "eslint-plugin-babel": "^3.2.0",
+    "eslint-plugin-promise": "^2.0.0",
+    "eslint-plugin-react": "^5.0.0",
+    "eslint-plugin-standard": "^2.0.0",
     "husky": "^0.13.1",
     "ignite-animatable": "^0.3.1",
     "ignite-dev-screens": "^2.0.0-beta.9",
-    "ignite-i18n": "^0.1.1",
     "ignite-ir-next": "^0.0.7",
     "ignite-vector-icons": "^0.2.1",
     "mockery": "^2.0.0",
