add product screen

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "lint": "standard --verbose | snazzy",
+    "lint": "eslint App",
     "lintdiff": "git diff --name-only --cached --relative | grep '\\.js$' | xargs standard | snazzy",
     "fixcode": "standard --fix",
     "clean": "rm -rf $TMPDIR/react-* && watchman watch-del-all && npm cache clean",
@@ -19,23 +19,26 @@
     "android:devices": "$ANDROID_HOME/platform-tools/adb devices",
     "android:logcat": "$ANDROID_HOME/platform-tools/adb logcat *:S ReactNative:V ReactNativeJS:V",
     "android:shake": "$ANDROID_HOME/platform-tools/adb devices | grep '\\t' | awk '{print $1}' | sed 's/\\s//g' | xargs -I {} $ANDROID_HOME/platform-tools/adb -s {} shell input keyevent 82",
-    "precommit": "npm run git-hook",
-    "prepush": "npm run git-hook",
-    "git-hook": "npm run lint -s && npm test -s"
+    "git-hook": "npm test -s",
+    "log": "react-native log-android",
+    "android": "react-native run-android"
   },
   "dependencies": {
     "apisauce": "^0.10.0",
+    "currency-formatter": "^1.2.1",
     "format-json": "^1.0.3",
+    "immutable": "^3.8.1",
     "lodash": "^4.17.2",
     "querystringify": "0.0.4",
     "ramda": "^0.23.0",
     "react": "~15.4.1",
-    "react-native": "0.42.0",
+    "react-native": "0.42.3",
     "react-native-action-button": "^2.6.9",
     "react-native-animatable": "^1.2.0",
     "react-native-config": "^0.2.1",
     "react-native-device-info": "^0.10.0",
     "react-native-drawer": "^2.3.0",
+    "react-native-image-picker": "^0.26.3",
     "react-native-vector-icons": "^4.1.1",
     "react-navigation": "^1.0.0-beta.9",
     "react-redux": "^5.0.2",
@@ -43,6 +46,7 @@
     "redux": "^3.6.0",
     "redux-persist": "^4.1.0",
     "redux-saga": "^0.14.3",
+    "redux-thunk": "^2.2.0",
     "reduxsauce": "0.4.1",
     "seamless-immutable": "^7.0.1"
   },
